--- a/Html and css Tmplet 2/index.html
+++ b/Html and css Tmplet 2/index.html
@@ -62,11 +62,44 @@
         </ul>
     </div>
 
-    <div class="section">
-        <div class="main-heading">
-            <h2>Section</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus neque fugiat, porro itaque unde ipsum
-                consequuntur dolorum viewport</p>
+    <div class="sectior">
+        <div class="container">
+            <div class="main-heading">
+                <h2>sectior</h2>
+                <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis </p>
+            </div>
+        
+            <div class="section-contont">
+                <div class="srv-box">
+                    <i class="fa-sharp fa-solid fa-comments"></i>
+                    <div class="text">
+                        <h3>voram amet intuitve</h3>
+                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis</p>
+                    </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fa-sharp fa-solid fa-comments"></i>
+                    <div class="text">
+                        <h3>voram amet intuitve</h3>
+                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis</p>
+                    </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fa-sharp fa-solid fa-comments"></i>
+                    <div class="text">
+                        <h3>voram amet intuitve</h3>
+                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis</p>
+                    </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fa-sharp fa-solid fa-comments"></i>
+                    <div class="text">
+                        <h3>voram amet intuitve</h3>
+                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 </body>
