--- a/Html and css Tmplet 2/index.html
+++ b/Html and css Tmplet 2/index.html
@@ -66,41 +66,140 @@
         <div class="container">
             <div class="main-heading">
                 <h2>sectior</h2>
-                <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis </p>
+                <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id,
+                    ea facilis </p>
             </div>
-        
+
             <div class="section-contont">
                 <div class="srv-box">
                     <i class="fa-sharp fa-solid fa-comments"></i>
                     <div class="text">
                         <h3>voram amet intuitve</h3>
-                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis</p>
+                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet
+                            nemo id, ea facilis</p>
                     </div>
                 </div>
                 <div class="srv-box">
                     <i class="fa-sharp fa-solid fa-comments"></i>
                     <div class="text">
                         <h3>voram amet intuitve</h3>
-                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis</p>
+                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet
+                            nemo id, ea facilis</p>
                     </div>
                 </div>
                 <div class="srv-box">
                     <i class="fa-sharp fa-solid fa-comments"></i>
                     <div class="text">
                         <h3>voram amet intuitve</h3>
-                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis</p>
+                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet
+                            nemo id, ea facilis</p>
                     </div>
                 </div>
                 <div class="srv-box">
                     <i class="fa-sharp fa-solid fa-comments"></i>
                     <div class="text">
                         <h3>voram amet intuitve</h3>
-                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id, ea facilis</p>
+                        <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet
+                            nemo id, ea facilis</p>
                     </div>
                 </div>
 
             </div>
         </div>
+    </div>
+
+
+    <div class="design">
+        <div class="imeges">
+            <img src="/Help/assets/mobile.png" alt="">
+        </div>
+        <div class="text">
+            <h2>Our Design Comes Wiht...</h2>
+            <ul>
+                <li>Fully Layered Adobe </li>
+                <li>1170pix Grid Style</li>
+                <li>Bootstrap Grid Ready</li>
+                <li>Modern And Clean Design</li>
+            </ul>
+        </div>
+    </div>
+
+
+    <div class="protofyl">
+        <div class="container">
+            <div class="main-heading">
+                <h2>protofo</h2>
+                <p>Lorem ipsum adipisicing elit. Soluta quasi earum tempore. Aspernatur explicabo nulla eveniet nemo id,
+                    ea facilis </p>
+            </div>
+            <ul class="shufull">
+                <li class="with_color">All </li>
+                <li>App</li>
+                <li>phon</li>
+                <li>Web</li>
+                <li>print</li>
+            </ul>
+        </div>
+
+        <div class="imges-contenit">
+            <div class="box">
+                <img src="/Help/assets/montet.jpeg" alt="">
+                <div class="capton">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="/Help/assets/montet.jpeg" alt="">
+                <div class="capton">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="/Help/assets/montet.jpeg" alt="">
+                <div class="capton">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="/Help/assets/montet.jpeg" alt="">
+                <div class="capton">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="/Help/assets/montet.jpeg" alt="">
+                <div class="capton">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="/Help/assets/montet.jpeg" alt="">
+                <div class="capton">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="/Help/assets/montet.jpeg" alt="">
+                <div class="capton">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="/Help/assets/montet.jpeg" alt="">
+                <div class="capton">
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="more">More</a>
     </div>
 </body>
 
